# islands

./: .gitignore  CMakeLists.txt  README.md  TODO.md  global_declarations.hpp.in  shaders.hpp
game_data/shaders/: font_bitmap.frag  font_bitmap.vert  planet.vert  test.frag  test.vert  text.frag  text.vert
game_data/textures/custom/: README.txt
include/: Camera.hpp  Font.hpp  Game.hpp  Grid.hpp  Gui.hpp  Object.hpp  Singletons.hpp  Skybox.hpp  Util.hpp  VertexArrayObject.hpp
include/glad/: glad.h
include/shader/: Shader.hpp
scripts/: gen_paths.py  pack_shaders.py
src/: Camera.cc  Font.cc  Font_ctors.cc  Game.cc  Game_ctors.cc  Grid.cc  Gui.cc  KeyBind.cc  Marker.cc  Object.cc  Object_ctors.cc  Planet.cc  Planet_ctors.cc  Singletons.cc  Skybox.cc  Skybox_ctors.cc  Star.cc  Star_ctors.cc  Texture.cc  Texture_ctors.cc  Trail.cc  Trail_ctors.cc  VAO_ctors.cc  VertexArrayObject.cc  gbuffer.cc  main.cc  stbi_image_impl.cc
src/glad/: glad.c
src/shader/: Shader.cc
src/shaders/: font_bitmap.frag  font_bitmap.vert  grid.frag  grid.vert  internal.frag  internal.vert  light_pass.frag  light_pass.vert  light_pass_sphere.frag  light_pass_sphere.vert  marker.frag  marker.vert  normals.frag  normals.geom  normals.vert  planet.frag  planet.vert  planet_forward.vert  selected.frag  selected.geom  selected.vert  shadow_map.frag  shadow_map.geom  shadow_map.vert  skybox.frag  skybox.vert  star.frag  star.vert  text.vert  text3d.vert  trail.frag  trail.vert
